[gd_scene load_steps=9 format=3 uid="uid://ksx8umkwdqi3"]

[ext_resource type="Script" uid="uid://2quk8e4fut6p" path="res://menu/profile_container_gui.gd" id="1_2u7mm"]
[ext_resource type="Texture2D" uid="uid://cpx5kfxxt6ppb" path="res://assets/gui/menu/frame.png" id="2_53p5v"]
[ext_resource type="Theme" uid="uid://cr5fa5khdjfpk" path="res://ui/themes/profile_button.tres" id="3_yfy00"]
[ext_resource type="Theme" uid="uid://wi6hfg8u1cn0" path="res://assets/gui/text_theme.tres" id="4_cha52"]
[ext_resource type="Script" uid="uid://tvoxkbc2wpdw" path="res://menu/level_label.gd" id="5_20txw"]
[ext_resource type="Texture2D" uid="uid://rsiaiwjoq00k" path="res://assets/gui/progress_bar/exp_bar_under.png" id="6_h8y4p"]
[ext_resource type="Texture2D" uid="uid://bos5fgrm5tls8" path="res://assets/gui/progress_bar/exp_bar.png" id="7_a2aib"]
[ext_resource type="Texture2D" uid="uid://p2kqvgdjswdw" path="res://assets/gui/progress_bar/exp_bar_fill.png" id="8_2wc08"]

[node name="ProfileContainer" type="MarginContainer"]
script = ExtResource("1_2u7mm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_53p5v")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 14
patch_margin_top = 2
patch_margin_right = 14
patch_margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 0

[node name="ActiveProfileButton" type="Button" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("3_yfy00")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 2.08165e-12)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="LevelContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="LevelLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_cha52")
bbcode_enabled = true
text = "Lvl.1"
fit_content = true
scroll_active = false
script = ExtResource("5_20txw")

[node name="ExpContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 2

[node name="ExpProgressBar" type="TextureProgressBar" parent="HBoxContainer/VBoxContainer/ExpContainer"]
unique_name_in_owner = true
layout_mode = 2
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("6_h8y4p")
texture_over = ExtResource("7_a2aib")
texture_progress = ExtResource("8_2wc08")
texture_progress_offset = Vector2(2, 2.08165e-12)

[node name="ExpValue" type="Label" parent="HBoxContainer/VBoxContainer/ExpContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1
